--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/main.css">
-        <title>Browser Starter</title>
+        <title>Ludum Dare view</title>
     </head>
     <body>
-        <h1>shadow-cljs - Browser</h1>
         <div id="app"></div>
         <script src="/js/main.js"></script>
     </body>
