split the app into smaller apps

--- a/public/tools/index.html
+++ b/public/tools/index.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/main.css">
-        <title>Ludum Dare Viewer</title>
+        <title>Tools — Ludum Dare Viewer</title>
     </head>
     <body>
         <div id="app"></div>
-        <h1>Nothing to see here yet...</h2>
         <script src="/js/main.js"></script>
+        <script src="/js/tools.js"></script>
     </body>
 </html>
