--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/main.css">
-        <title>Ludum Dare Viewer</title>
+        <title>Ludum Dare Profile Viewer</title>
     </head>
     <body>
-        <div id="app"></div>
-        <h1>Nothing to see here yet...</h2>
+        <div id="app">
+            <h1>Profile view will appear here soon...</h1>
+        </div>
         <script src="/js/main.js"></script>
     </body>
 </html>
